force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/YTD_Revenue__c.field-meta.xml
<CustomField>
    <fullName>YTD_Revenue__c</fullName>
    <label>YTD Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>