force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/YTD_Revenue_Close_Rate__c.field-meta.xml
<CustomField>
    <fullName>YTD_Revenue_Close_Rate__c</fullName>
    <label>YTD Revenue Close Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>