force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/YTD_Revenue_Quota_Percent__c.field-meta.xml
<CustomField>
    <fullName>YTD_Revenue_Quota_Percent__c</fullName>
    <label>YTD Revenue Quota Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>