force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/YTD_Win_Percentage__c.field-meta.xml
<CustomField>
    <fullName>YTD_Win_Percentage__c</fullName>
    <label>YTD Win Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>