force-app/main/default/objects/Sales_Rep_Profile_Snapshot__c/fields/YTDQP__c.field-meta.xml
<CustomField>
    <fullName>YTDQP__c</fullName>
    <label>YTDQP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>